[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://resource/grass_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/WinScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/LoseScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/DeathZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Level1.gd" type="Script" id=6]
[ext_resource path="res://scenes/WinZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://resource/level_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://scenes/Spawner.gd" type="Script" id=9]
[ext_resource path="res://scenes/Fish.tscn" type="PackedScene" id=10]

[node name="Level1" type="Node2D"]
pause_mode = 2
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 1 )]
pause_mode = 1
position = Vector2( 130, 198 )
collision_layer = 3
collision_mask = 3
speed = 300

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1
tile_data = PoolIntArray( 262145, 0, 3, 262146, 0, 4, 393219, 0, 3, 393220, 0, 65543, 393221, 0, 4, 458759, 0, 3, 458760, 0, 65543, 458761, 0, 65543, 458762, 0, 65543, 458763, 0, 65543, 458764, 0, 65543, 458765, 0, 65543, 458766, 0, 65543, 458767, 0, 65543, 458768, 0, 65543, 458769, 0, 4, 458773, 0, 65537, 458774, 0, 65543, 458775, 0, 65543, 458776, 0, 65543, 458777, 0, 65543, 458778, 0, 65543, 458779, 0, 65543, 458780, 0, 65543, 458781, 0, 4 )

[node name="WinScreen" parent="." instance=ExtResource( 3 )]
visible = false

[node name="LoseScreen" parent="." instance=ExtResource( 4 )]
visible = false

[node name="DeathZone" parent="." instance=ExtResource( 5 )]
position = Vector2( 3123, 680 )
scale = Vector2( 100, 5 )

[node name="WinZone" parent="." instance=ExtResource( 7 )]
position = Vector2( 1843, 446 )
scale = Vector2( 0.615, 0.505 )

[node name="LevelLabel" type="RichTextLabel" parent="."]
margin_left = 125.0
margin_top = 40.0
margin_right = 394.0
margin_bottom = 123.0
custom_fonts/normal_font = ExtResource( 8 )
text = "LEVEL 1"

[node name="FishSpawner" type="Node2D" parent="."]
pause_mode = 1
position = Vector2( 1247, 125 )
script = ExtResource( 9 )
obstacle = ExtResource( 10 )
